Enhance HTML structure with SEO and social media meta tags
- Updated page title to reflect portfolio branding.
- Added meta description, keywords, and author for improved SEO.
- Implemented Open Graph and Twitter meta tags for better social media visibility.
- Refined HTML layout with essential meta tags for enhanced performance and sharing.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Deepak Kushwah - Portfolio</title>
+  <meta name="description"
+    content="A professional portfolio showcasing the skills, projects, and expertise of Deepak Kushwah, a Full Stack Developer specializing in MERN stack." />
+  <meta name="author" content="Deepak Kushwah" />
+  <meta name="keywords"
+    content="Deepak Kushwah, Full Stack Developer, MERN Stack, Portfolio, React, Node.js, JavaScript, TypeScript, Web Development" />
+  <link rel="icon" type="image/svg+xml" href="/profile-pic.png" />
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Deepak Kushwah - Portfolio" />
+  <meta property="og:description"
+    content="Explore the portfolio of Deepak Kushwah, a full-stack developer with expertise in React, Node.js, and more." />
+  <meta property="og:image" content="/path-to-image.jpg" />
+  <meta property="og:url" content="https://battle-champ.vercel.app/" />
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Deepak Kushwah - Portfolio" />
+  <meta name="twitter:description"
+    content="Explore the portfolio of Deepak Kushwah, a full-stack developer with expertise in React, Node.js, and more." />
+  <meta name="twitter:image" content="/path-to-image.jpg" />
+  <meta name="twitter:creator" content="@deepak748030" />
+  <!-- Additional Stylesheets or Links -->
+  <link rel="stylesheet" href="/path-to-styles.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
